Slight change to app.py and fixed bottom navbar on smaller devices

--- a/static/css/retriever.css
+++ b/static/css/retriever.css
@@ -80,7 +80,6 @@ body {
 }
 
 .navbar-fixed-bottom {
-	width: 100%;
 	background-color: #f5f5f5;
 }
 
